@@ -1,3 +1,7 @@
+2023-05-01  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/utils.cpp: Use Rcpp::stop instead of throw
+
 2023-04-29  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro release and date
